--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cddff75",
+   "id": "1f3f61f3",
    "metadata": {},
    "source": [
     "# 1. Necessary Headfiles"
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "70cd5753",
+   "execution_count": 14,
+   "id": "3c52b7b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torchvision\n",
-    "from torch.utils.tensorboard import SummaryWriter\n",
+    "# from torch.utils.tensorboard import SummaryWriter\n",
     "import time\n",
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
@@ -27,12 +27,13 @@
     "import os\n",
     "import scipy.io\n",
     "from random import random\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import gc"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3b954b1d",
+   "id": "d5816388",
    "metadata": {},
    "source": [
     "# 2. Prepare Datasets"
@@ -40,92 +41,34 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c60bb163",
+   "id": "5090b583",
    "metadata": {},
    "source": [
     "## 2.1. Navigate to the data folder "
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7ae83d12",
-   "metadata": {},
-   "source": [
-    "## 2.2. Load the data"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "b29e5e1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88169d9806994aff850fe4e116c6f63f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=20), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length of the data: (59, 2400, 62)\n",
-      "Length of the data: (59, 2400, 43)\n",
-      "Length of the data: (59, 2400, 63)\n",
-      "Length of the data: (59, 2400, 62)\n",
-      "Length of the data: (59, 2400, 59)\n",
-      "Length of the data: (59, 2400, 64)\n",
-      "Length of the data: (59, 2400, 62)\n",
-      "Length of the data: (59, 2400, 58)\n",
-      "Length of the data: (59, 2400, 62)\n",
-      "Length of the data: (59, 2400, 58)\n",
-      "Length of the data: (59, 2400, 66)\n",
-      "Length of the data: (59, 2400, 66)\n",
-      "Length of the data: (59, 2400, 66)\n",
-      "Length of the data: (59, 2400, 66)\n",
-      "Length of the data: (59, 2400, 58)\n",
-      "Length of the data: (59, 2400, 63)\n",
-      "Length of the data: (59, 2400, 66)\n",
-      "Length of the data: (59, 2400, 63)\n",
-      "Length of the data: (59, 2400, 61)\n",
-      "Length of the data: (59, 2400, 63)\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "root_dir = \"../eegdata\"\n",
-    "# experimental dir: rest, conditionA, conditionB, conditionC\n",
-    "exper_dir = \"conditionC\"\n",
-    "# condition_dir: hc, mcs, uws\n",
-    "condi_dir = \"hc\"\n",
-    "\n",
-    "rest_hc_dataset = MyData(root_dir,exper_dir,condi_dir)\n",
-    "# filepath是最子文件夹中每个.mat文件的名字\n",
-    "# path是包含当前情况的.mat文件的子文件夹\n",
-    "# length = len(rest_hc_dataset)\n",
-    "for i in tqdm(range(len(rest_hc_dataset))):\n",
-    "    filename = os.path.join(rest_hc_dataset.path,rest_hc_dataset.file_path[i])\n",
-    "    mat = scipy.io.loadmat(filename)\n",
-    "    print(f\"Length of the data: {mat['datas'].shape}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "af50d93f",
+   "execution_count": 15,
+   "id": "0f8e389d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "root_dir = \"../eegdata\"\n",
+    "# experimental dir: rest, conditionA, conditionB, conditionC\n",
+    "exper_dir = \"conditionA\"\n",
+    "# condition_dir: hc, mcs, uws\n",
+    "condi_dir = \"hc\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9897a0f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# distribution index matrix\n",
     "matrix_index = np.array([\n",
     "    [0,0,2,2,4,4,6,6,8,8,2,2,4,4,6,6,2,4,6,3,3,5,5,3,3,5,5,3,3,2,2,4,4,6,6,1,1,3,3,5,5,7,7,2,2,4,4,6,6,1,1,3,3,5,5,7,7,0,5],\n",
     "    [4,6,3,7,3,7,3,7,4,6,1,9,1,9,1,9,5,5,5,4,6,4,6,2,8,2,8,0,10,4,6,4,6,4,6,4,6,3,7,3,7,4,6,2,8,2,8,2,8,3,7,1,9,1,9,3,7,5,5]\n",
@@ -133,82 +76,218 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "ea711df2",
+   "cell_type": "markdown",
+   "id": "14bc60b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 59)\n"
-     ]
-    }
-   ],
    "source": [
-    "print(matrix_index.shape)"
+    "## 2.2. Load the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "5ff06289",
+   "execution_count": null,
+   "id": "23a29933",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\envs\\pytorch\\lib\\site-packages\\ipykernel_launcher.py:6: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4541726426f8495f9e029afe1aac5d3e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\envs\\pytorch\\lib\\site-packages\\ipykernel_launcher.py:20: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c5dd48b9caf74efb8b65db94122d51ea",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/61 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 设置使用GPU\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "dataset = MyData(root_dir,exper_dir,condi_dir) # eg.conditionA\\hc\n",
+    "\n",
+    "data_map_all = None # eg.conditionA\\hc下所有被试map集合\n",
+    "for person in tqdm(range(len(dataset))): #12种情况中的1种，其中的所有被试\n",
+    "    # filepath是最子文件夹中每个.mat文件的名字\n",
+    "    # path是包含当前情况的.mat文件的子文件夹\n",
+    "    filename = os.path.join(dataset.path,dataset.file_path[person]) # eg. conditionA\\hc\\hc1.set.mat\n",
+    "    data = scipy.io.loadmat(filename)# 读取该被试的数据为字典\n",
+    "    data = data['datas']# 键值对读取59*x的数据矩阵\n",
+    "    \n",
+    "    # 将数据移动到GPU上\n",
+    "    data = torch.from_numpy(data).to(device)\n",
+    "    \n",
+    "    # 在GPU上处理数据\n",
+    "    # 创建被试全0map\n",
+    "    data_map_person = None \n",
+    "    # 遍历该被试的所有段\n",
+    "    for para in tqdm(range(data.shape[2])): \n",
+    "        # 创建段全0map\n",
+    "        data_map_para = None \n",
+    "        for point in range(data.shape[1]): # 遍历该段所有数据点\n",
+    "            # 创建单个数据点全0map\n",
+    "            data_map_point = torch.zeros((10, 11)).to(device) \n",
+    "            # 遍历59电极数据并赋值给全0map\n",
+    "            for channel in range(data.shape[0]): \n",
+    "                data_map_point[matrix_index[0][channel]][matrix_index[1][channel]] = data[channel][point][para]\n",
+    "            # 保存单个数据点map到段map\n",
+    "            if data_map_para is None:\n",
+    "                data_map_para = data_map_point.unsqueeze(0)\n",
+    "            else:\n",
+    "                data_map_para = torch.cat((data_map_para, data_map_point.unsqueeze(0)), dim=0)\n",
+    "        # 保存一段map到被试map\n",
+    "        if data_map_person is None:\n",
+    "            data_map_person = data_map_para.unsqueeze(0)\n",
+    "        else:\n",
+    "            data_map_person = torch.cat((data_map_person, data_map_para.unsqueeze(0)), dim=0)\n",
+    "    # 保存一个被试map\n",
+    "    if data_map_all is None:\n",
+    "        data_map_all = data_map_person.unsqueeze(0)\n",
+    "    else:\n",
+    "        data_map_all = torch.cat((data_map_all, data_map_person), dim=0) # 修改此处\n",
+    "    \n",
+    "    # 遍历一个被试，清理一次gpu内存\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb20a0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "matrix_data = np.arange(1,60).reshape(59,1)\n",
-    "# print(matrix_data)"
+    "print(data_map_all.shape)\n",
+    "print(data.shape)\n",
+    "print(len(dataset))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "b9119656",
+   "cell_type": "markdown",
+   "id": "8ac15ce8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'zeros' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-55-3082b9d48810>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0meeg_map\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatrix_index\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'zeros' is not defined"
-     ]
-    }
-   ],
    "source": [
-    "eeg_map = np.zeros((10,10))\n",
-    "for i in range(matrix_index.shape[1]):\n",
-    "    eeg_map[matrix_index[0][i]][matrix_index[1][i]]=matrix_data"
+    "## 2.3 Save the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "a9f73066",
+   "execution_count": 7,
+   "id": "37a9a641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(data_map_all,'..\\eegmap_direct\\conditionA\\A_hc.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "aedf24c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "[[[1. 2.]\n",
+      "  [3. 4.]]\n",
+      "\n",
+      " [[5. 6.]\n",
+      "  [7. 8.]]]\n"
      ]
     }
    ],
    "source": [
-    "print(matrix_index[1][1])"
+    "import numpy as np\n",
+    "\n",
+    "mat_a = np.array([\n",
+    "    [1,2,3,4],\n",
+    "    [5,6,7,8]\n",
+    "])\n",
+    "mat_index = np.array([\n",
+    "    [0,0,1,1],\n",
+    "    [0,1,0,1]\n",
+    "])\n",
+    "\n",
+    "keep_map = None\n",
+    "\n",
+    "for j in range(mat_a.shape[0]):\n",
+    "    map = np.zeros((2,2))\n",
+    "    for i in range(mat_a.shape[1]):\n",
+    "        map[mat_index[0][i]][mat_index[1][i]] = mat_a[j][i]\n",
+    "    if keep_map is None:\n",
+    "        keep_map = map[np.newaxis, ...]\n",
+    "    else:\n",
+    "        keep_map = np.concatenate((keep_map, map[np.newaxis, ...]), axis=0)\n",
+    "\n",
+    "print(keep_map)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "1ff8d135",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5. 6.]\n",
+      " [7. 8.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(keep_map[1])\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3_environments-pytorch] *",
+   "display_name": "Python [conda env:pytorch] *",
    "language": "python",
-   "name": "conda-env-anaconda3_environments-pytorch-py"
+   "name": "conda-env-pytorch-py"
   },
   "language_info": {
    "codemirror_mode": {
