All condition datamap done.

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a75b9864",
+   "id": "633e8273",
    "metadata": {},
    "source": [
     "# 验证保存的数据"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3fe9736f",
+   "id": "c3203f58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "from torchvision import transforms\n",
     "from tqdm import tqdm_notebook as tqdm # View procedure\n",
     "import os\n",
-    "import scipy.io\n",
+    "import scipy.io \n",
     "from random import random\n",
     "import numpy as np\n",
     "import gc"
@@ -33,12 +33,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66ca2b1a",
+   "execution_count": 2,
+   "id": "42d065c0",
    "metadata": {},
    "outputs": [],
    "source": [
     "data = torch.load('../eegmap_direct/conditionA/hc/hc1.set.mat.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d810caa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([61, 2400, 10, 11])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.size())"
    ]
   }
  ],
