--- a/train.ipynb
+++ b/train.ipynb
@@ -797,7 +797,7 @@
    "outputs": [],
    "source": [
     "# add Tensorboard\n",
-    "writer = SummaryWriter(\"./logs_train\")\n"
+    "writer = SummaryWriter(\"../logs_train\")\n"
    ]
   },
   {
@@ -922,12 +922,12 @@
     "    if total_test_loss < min_test_loss:\n",
     "        min_test_loss = total_test_loss\n",
     "        print(\"..........Saving the model..........\")\n",
-    "        torch.save(model.state_dict(),f\"./model/Epoch{i+1}.pt\")"
+    "        torch.save(model.state_dict(),f\"../model/Epoch{i+1}.pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "322cc097",
    "metadata": {},
    "outputs": [
@@ -938,17 +938,17 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-e3482a9a5837>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Clear gpu\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-26-64c02c3df590>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mdata_map\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mlabel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
    "source": [
     "# Clear gpu\n",
-    "del model\n",
     "del optimizer\n",
     "del scheduler\n",
     "del criterion\n",
+    "del model\n",
     "del data_map\n",
     "del label\n",
     "del label_pred\n",
@@ -959,8 +959,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "eb35a443",
+   "execution_count": 27,
+   "id": "528060df",
    "metadata": {},
    "outputs": [],
    "source": [
