Change Labels for HC and DOC

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c3203f58",
    "metadata": {},
    "outputs": [],
@@ -110,6 +110,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0104e3d5",
+   "metadata": {},
+   "source": [
+    "# Test Slide Window Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7a42d675",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Anaconda\\envs\\pytorch\\lib\\site-packages\\ipykernel_launcher.py:8: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00071ccc6ba647afafaf02af5f884f8d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/18 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/eegmap_overlap_200\\rest\\hc\\hc10_over200.pt\n",
+      "torch.Size([747, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc11_over200.pt\n",
+      "torch.Size([477, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc12_over200.pt\n",
+      "torch.Size([540, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc13_over200.pt\n",
+      "torch.Size([469, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc14_over200.pt\n",
+      "torch.Size([428, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc15_over200.pt\n",
+      "torch.Size([586, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc16_over200.pt\n",
+      "torch.Size([542, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc17_over200.pt\n",
+      "torch.Size([590, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc18_over200.pt\n",
+      "torch.Size([542, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc1_over200.pt\n",
+      "torch.Size([570, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc21_over200.pt\n",
+      "torch.Size([584, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc22_over200.pt\n",
+      "torch.Size([576, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc3_over200.pt\n",
+      "torch.Size([573, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc5_over200.pt\n",
+      "torch.Size([580, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc6_over200.pt\n",
+      "torch.Size([558, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc7_over200.pt\n",
+      "torch.Size([558, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc8_over200.pt\n",
+      "torch.Size([616, 2400, 10, 11])\n",
+      "../data/eegmap_overlap_200\\rest\\hc\\hc9_over200.pt\n",
+      "torch.Size([581, 2400, 10, 11])\n",
+      "10117\n"
+     ]
+    }
+   ],
+   "source": [
+    "root_dir = \"../data/eegmap_overlap_200\"\n",
+    "# experimental dir: rest, conditionA, conditionB, conditionC\n",
+    "exper_dir = \"rest\"\n",
+    "# condition_dir: hc, mcs, uws\n",
+    "condi_dir = \"hc\"\n",
+    "dataset = MyData(root_dir, exper_dir, condi_dir) # eg.conditionA/hc\n",
+    "sum = 0\n",
+    "for person in tqdm(range(len(dataset))):\n",
+    "    filename = os.path.join(dataset.path, dataset.file_path[person])\n",
+    "    data_map = torch.load(filename)\n",
+    "    print(filename)\n",
+    "    print(data_map.size())\n",
+    "    sum = sum + data_map.size(0)\n",
+    "    del data_map\n",
+    "    gc.collect()\n",
+    "    torch.cuda.empty_cache()\n",
+    "print(sum)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "d810caa7",
@@ -128,9 +229,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3_environments-pytorch] *",
+   "display_name": "Python [conda env:pytorch] *",
    "language": "python",
-   "name": "conda-env-anaconda3_environments-pytorch-py"
+   "name": "conda-env-pytorch-py"
   },
   "language_info": {
    "codemirror_mode": {
