edit label process

--- a/train.ipynb
+++ b/train.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2a0232fd",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
     "import gc\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from net_cnn_lstm1 import MyNetwork\n",
-    "from torchnlp.word_to_vector import GloVe\n",
+    "# from torchnlp.word_to_vector import GloVe\n",
     "from torch.utils.data import TensorDataset\n",
     "from torch.utils.data import DataLoader"
    ]
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ca0a7500",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "e92d241c",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "682c2f05",
    "metadata": {},
    "outputs": [],
@@ -449,8 +449,8 @@
     "#     from network_cnn_lstm_3 import MyNetwork\n",
     "# elif model_name == model_list[3]: # CascadeCept_2\n",
     "#     from network_cnn_lstm_4 import MyNetwork\n",
-    "model_list = ['_1', '_2', '_3', '_4']\n",
-    "model_name = model_list[3]\n",
+    "model_list = ['_1', '_2', '_3', '_4', '_5']\n",
+    "model_name = model_list[5]\n",
     "if model_name == model_list[0]: \n",
     "    from net_cnn_lstm1 import MyNetwork\n",
     "elif model_name == model_list[1]: \n",
@@ -459,6 +459,9 @@
     "    from net_cnn_lstm3 import MyNetwork\n",
     "elif model_name == model_list[3]: \n",
     "    from net_cnn_lstm4 import MyNetwork\n",
+    "elif model_name == model_list[4]: \n",
+    "    from net_cnn_lstm5 import MyNetwork\n",
+    "\n",
     "model = MyNetwork(input_size, hidden_size, num_layers, output_size)\n",
     "model = model.to(device)\n",
     "\n",
