--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -60,46 +60,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "7411795b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9eaf7fed1fdf404cbfc7a07de4dad03d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/18 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(59, 2400, 48)\n",
-      "(59, 2400, 63)\n",
-      "(59, 2400, 40)\n",
-      "(59, 2400, 45)\n",
-      "(59, 2400, 40)\n",
-      "(59, 2400, 36)\n",
-      "(59, 2400, 49)\n",
-      "(59, 2400, 46)\n",
-      "(59, 2400, 50)\n",
-      "(59, 2400, 46)\n",
-      "(59, 2400, 49)\n",
-      "(59, 2400, 48)\n",
-      "(59, 2400, 48)\n",
-      "(59, 2400, 49)\n",
-      "(59, 2400, 47)\n",
-      "(59, 2400, 47)\n",
-      "(59, 2400, 52)\n",
-      "(59, 2400, 49)\n"
+     "ename": "ImportError",
+     "evalue": "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-77e2b8fd1536>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mcondi_dir\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"hc\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdataset\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mMyData\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mroot_dir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexper_dir\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcondi_dir\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# eg.conditionA/hc\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mperson\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# 12种情况中的1种，其中的所有被试\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[1;31m# filepath是最子文件夹中每个.mat文件的名字\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;31m# path是包含当前情况的.mat文件的子文件夹\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pytorch\\lib\\site-packages\\tqdm\\notebook.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    236\u001b[0m         \u001b[0munit_scale\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munit_scale\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munit_scale\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    237\u001b[0m         \u001b[0mtotal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0munit_scale\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtotal\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 238\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstatus_printer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfp\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtotal\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdesc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mncols\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    239\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpbar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mproxy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    240\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplayed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\pytorch\\lib\\site-packages\\tqdm\\notebook.py\u001b[0m in \u001b[0;36mstatus_printer\u001b[1;34m(_, total, desc, ncols)\u001b[0m\n\u001b[0;32m    111\u001b[0m         \u001b[1;31m# Prepare IPython progress bar\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    112\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mIProgress\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m# #187 #451 #558 #872\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 113\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mImportError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mWARN_NOIPYW\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    114\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mtotal\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    115\u001b[0m             \u001b[0mpbar\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mIProgress\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtotal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html"
      ]
     }
    ],
@@ -705,14 +680,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fa8d3963",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1581812ee7f14b5099aee1ed9717580e",
+       "model_id": "f330c8200d7f4c1dbdfd990cae8acc9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,7 +708,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0dc7ee09c2c4c56b5dffd69454c875b",
+       "model_id": "ce23c32528174797a03475bf651910e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -754,7 +729,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bbf09669ed134c48bd14fb956b9ce17c",
+       "model_id": "ca8dda71b924488290315b922f1c9a25",
        "version_major": 2,
        "version_minor": 0
       },
@@ -775,7 +750,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bd5f8a0f4b24971a0d40bd8781c3782",
+       "model_id": "e034d16d6b534e788e49aff15e098b5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -789,7 +764,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "716af790bc6349d181b309c129fb8a58",
+       "model_id": "c9f06affcead49faadb27f86e8a54791",
        "version_major": 2,
        "version_minor": 0
       },
@@ -803,7 +778,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1ca6d1c6bea4f31b1c107c549b8a764",
+       "model_id": "20ca74ef528740d09a798790231c652f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -833,57 +808,67 @@
     "        dataset = MyData(root_dir, mode, condi_dir) # eg.conditionA/hc\n",
     "        for person in tqdm(range(len(dataset))):\n",
     "            filename = os.path.join(dataset.path, dataset.file_path[person])\n",
-    "            data_map = torch.load(filename)\n",
-    "            name_without_extension = os.path.splitext(os.path.basename(filename))[0]\n",
-    "            label = torch.zeros(data_map.size(0)) # label = 0\n",
-    "            if classify == 'HC/DOC':\n",
-    "                save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_hc_doc_label.pt\"\n",
-    "            elif classify == 'MCS/UWS':\n",
-    "                save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_mcs_uws_label.pt\"\n",
-    "            torch.save(label, save_path)\n",
-    "            if hc_flag == 0:\n",
-    "                print(f\"被试类别：{condi_dir}, 标签：{label[0]}\")\n",
-    "                hc_flag = hc_flag + 1\n",
-    "            del label,data_map,filename\n",
-    "            gc.collect()\n",
-    "            torch.cuda.empty_cache()\n",
+    "            parts = filename.split(\"\\\\\")\n",
+    "            file_name = parts[-1]\n",
+    "            name_without_extension = file_name.split(\".\")[0]\n",
+    "            file_last = name_without_extension.split(\"_\")[-1]\n",
+    "            if file_last == 'label': # data\n",
+    "                pass\n",
+    "            else:\n",
+    "                data_map = torch.load(filename)\n",
+    "                name_without_extension = os.path.splitext(os.path.basename(filename))[0]\n",
+    "                label = torch.zeros(data_map.size(0)) # label = 0\n",
+    "                if classify == 'HC/DOC':\n",
+    "                    save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_hc_doc_label.pt\"\n",
+    "                elif classify == 'MCS/UWS':\n",
+    "                    save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_mcs_uws_label.pt\"\n",
+    "                torch.save(label, save_path)\n",
+    "                if hc_flag == 0:\n",
+    "                    print(f\"被试类别：{condi_dir}, 标签：{label[0]}\")\n",
+    "                    hc_flag = hc_flag + 1\n",
     "        condi_dir = \"mcs\"\n",
     "        dataset = MyData(root_dir, mode, condi_dir) # eg.conditionA/hc\n",
     "        for person in tqdm(range(len(dataset))):\n",
     "            filename = os.path.join(dataset.path, dataset.file_path[person])\n",
-    "            data_map = torch.load(filename)\n",
-    "            name_without_extension = os.path.splitext(os.path.basename(filename))[0]\n",
-    "            if classify == 'HC/DOC':\n",
-    "                label = torch.ones(data_map.size(0)) # label = 1, for HC/DOC\n",
-    "                save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_hc_doc_label.pt\"\n",
-    "            elif classify == 'MCS/UWS':\n",
-    "                label = torch.zeros(data_map.size(0)) # label = 0, for MCS/UWS\n",
-    "                save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_mcs_uws_label.pt\"\n",
-    "            torch.save(label, save_path)\n",
-    "            if mcs_flag == 0:\n",
-    "                print(f\"被试类别：{condi_dir}, 标签：{label[0]}\")\n",
-    "                mcs_flag = mcs_flag + 1\n",
-    "            del label,data_map,filename\n",
-    "            gc.collect()\n",
-    "            torch.cuda.empty_cache()\n",
+    "            parts = filename.split(\"\\\\\")\n",
+    "            file_name = parts[-1]\n",
+    "            name_without_extension = file_name.split(\".\")[0]\n",
+    "            file_last = name_without_extension.split(\"_\")[-1]\n",
+    "            if file_last == 'label': # data\n",
+    "                pass\n",
+    "            else:\n",
+    "                data_map = torch.load(filename)\n",
+    "                if classify == 'HC/DOC':\n",
+    "                    label = torch.ones(data_map.size(0)) # label = 1, for HC/DOC\n",
+    "                    save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_hc_doc_label.pt\"\n",
+    "                elif classify == 'MCS/UWS':\n",
+    "                    label = torch.zeros(data_map.size(0)) # label = 0, for MCS/UWS\n",
+    "                    save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_mcs_uws_label.pt\"\n",
+    "                torch.save(label, save_path)\n",
+    "                if mcs_flag == 0:\n",
+    "                    print(f\"被试类别：{condi_dir}, 标签：{label[0]}\")\n",
+    "                    mcs_flag = mcs_flag + 1\n",
     "        condi_dir = \"uws\"\n",
     "        dataset = MyData(root_dir, mode, condi_dir) # eg.conditionA/hc\n",
     "        for person in tqdm(range(len(dataset))):\n",
     "            filename = os.path.join(dataset.path, dataset.file_path[person])\n",
-    "            data_map = torch.load(filename)\n",
-    "            name_without_extension = os.path.splitext(os.path.basename(filename))[0]\n",
-    "            label = torch.ones(data_map.size(0)) # label = 1\n",
-    "            if classify == 'HC/DOC':\n",
-    "                save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_hc_doc_label.pt\"\n",
-    "            elif classify == 'MCS/UWS':\n",
-    "                save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_mcs_uws_label.pt\"\n",
-    "            torch.save(label, save_path)\n",
-    "            if uws_flag == 0:\n",
-    "                print(f\"被试类别：{condi_dir}, 标签：{label[0]}\")\n",
-    "                uws_flag = uws_flag + 1\n",
-    "            del label,data_map,filename\n",
-    "            gc.collect()\n",
-    "            torch.cuda.empty_cache()"
+    "            parts = filename.split(\"\\\\\")\n",
+    "            file_name = parts[-1]\n",
+    "            name_without_extension = file_name.split(\".\")[0]\n",
+    "            file_last = name_without_extension.split(\"_\")[-1]\n",
+    "            if file_last == 'label': # data\n",
+    "                pass\n",
+    "            else:\n",
+    "                data_map = torch.load(filename)\n",
+    "                label = torch.ones(data_map.size(0)) # label = 1\n",
+    "                if classify == 'HC/DOC':\n",
+    "                    save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_hc_doc_label.pt\"\n",
+    "                elif classify == 'MCS/UWS':\n",
+    "                    save_path = f\"../data/eegmap_split/{exper_dir}/{mode}/{condi_dir}/{name_without_extension}_mcs_uws_label.pt\"\n",
+    "                torch.save(label, save_path)\n",
+    "                if uws_flag == 0:\n",
+    "                    print(f\"被试类别：{condi_dir}, 标签：{label[0]}\")\n",
+    "                    uws_flag = uws_flag + 1"
    ]
   },
   {
