--- a/train_2.ipynb
+++ b/train_2.ipynb
@@ -23,7 +23,7 @@
     "import gc\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
     "from net_cnn_lstm1 import MyNetwork\n",
-    "from torchnlp.word_to_vector import GloVe\n",
+    "# from torchnlp.word_to_vector import GloVe\n",
     "from torch.utils.data import TensorDataset\n",
     "from torch.utils.data import DataLoader"
    ]
